-- Création de la table "users"
CREATE TABLE "User"
(
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    username   VARCHAR(255),
    password   VARCHAR(255),
    firstName  VARCHAR(255),
    lastName   VARCHAR(255),
    email      VARCHAR(255),
    role       VARCHAR(255),
    manager_id BIGINT,
    CONSTRAINT pk_user PRIMARY KEY (id)
);

ALTER TABLE "User"
    ADD CONSTRAINT FK_USER_ON_MANAGER FOREIGN KEY (manager_id) REFERENCES "User" (id);

-- Création de la table "tasks"
CREATE TABLE tags
(
    id   BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(255),
    CONSTRAINT pk_tags PRIMARY KEY (id)
);

CREATE TABLE task_changes
(
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    task_id            BIGINT                                  NOT NULL,
    user_id            BIGINT                                  NOT NULL,
    change_date        TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    change_type        VARCHAR(255)                            NOT NULL,
    change_description VARCHAR(255),
    CONSTRAINT pk_task_changes PRIMARY KEY (id)
);

CREATE TABLE tasks
(
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    description  VARCHAR(1000),
    status       VARCHAR(255)                            NOT NULL,
    assigned_to  BIGINT,
    created_by   BIGINT,
    is_locked    BOOLEAN,
    title        VARCHAR(255),
    creationDate TIMESTAMP WITHOUT TIME ZONE,
    dueDate      TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_tasks PRIMARY KEY (id)
);

CREATE TABLE tokens
(
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    user_id             BIGINT                                  NOT NULL,
    modification_tokens INTEGER,
    deletion_tokens     INTEGER,
    last_reset_date     TIMESTAMP WITHOUT TIME ZONE,
    CONSTRAINT pk_tokens PRIMARY KEY (id)
);

ALTER TABLE tasks
    ADD CONSTRAINT FK_TASKS_ON_ASSIGNED_TO FOREIGN KEY (assigned_to) REFERENCES users (id);

ALTER TABLE tasks
    ADD CONSTRAINT FK_TASKS_ON_CREATED_BY FOREIGN KEY (created_by) REFERENCES users (id);

ALTER TABLE task_changes
    ADD CONSTRAINT FK_TASK_CHANGES_ON_TASK FOREIGN KEY (task_id) REFERENCES tasks (id);

ALTER TABLE task_changes
    ADD CONSTRAINT FK_TASK_CHANGES_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);

ALTER TABLE tokens
    ADD CONSTRAINT FK_TOKENS_ON_USER FOREIGN KEY (user_id) REFERENCES users (id);