package com.example.devsyncss.entities.enums;

public enum ChangeType {
    CREATION, MODIFICATION, DELETION, STATUS_CHANGE, ASSIGNMENT_CHANGE
}