package com.example.devsyncss.entities.enums;

public enum Role {
    USER, MANAGER
}
